# pop3-client-rs

./: Cargo.toml  README.md
src/: builder.rs  error.rs  lib.rs  request.rs  response.rs
src/client/: mod.rs  sync.rs  tokio.rs
tests/: async.rs  sync.rs
