[package]
authors     = [
    "Anton Dutov <anton.dutov@gmail.com>",
    "Alena Yuryeva <ayuryeva@innopolis.ru>"
]
edition     = "2021"
license     = "MIT"
readme      = "README.md"
name        = "pop3-client"
version     = "0.2.0"
repository  = "https://github.com/anton-dutov/pop3-client-rs"
description = "Another pop3 client"
categories  = ["email"]
keywords    = ["mail", "pop3"]



[features]
default     = []
with-rustls = ["rustls", "webpki", "webpki-roots"]


[dependencies]
bytes        = "1"
rustls       = {version = "0.23", optional = true }
webpki       = {version = "0.22", optional = true }
webpki-roots = {version = "0.26", optional = true }

