[package]
authors     = [
    "Anton Dutov <anton.dutov@gmail.com>",
    "Alena Yuryeva <ayuryeva@innopolis.ru>"
]
edition     = "2021"
license     = "MIT"
readme      = "README.md"
name        = "pop3-client"
version     = "0.3.0"
repository  = "https://github.com/anton-dutov/pop3-client-rs"
description = "Another pop3 client"
categories  = ["email"]
keywords    = ["mail", "pop3"]



[features]
default       = ["runtime-tokio"]
runtime-sync  = []
runtime-tokio = ["dep:tokio"]
# with-rustls   = ["rustls", "webpki", "webpki-roots"]


[dependencies]
bytes        = "1"
thiserror    = "2"
tokio        = {version = "1", optional = true, features = ["net", "io-util"]}
rustls       = {version = "0.23", optional = true }
webpki       = {version = "0.22", optional = true }
webpki-roots = {version = "0.26", optional = true }

[dev-dependencies]
tokio        = {version = "1", features = ["rt-multi-thread", "macros"]}